"Add AgentMonitorV2 with team capacity, auto refresh, and brand/workspace filtering; enhance i18n for V2 translations and refactor layout menu"

--- a/src/locales/translations.json
+++ b/src/locales/translations.json
@@ -6,6 +6,7 @@
       "brands": "Brand Management",
       "users": "User Management",
       "agentMonitor": "Agent Monitor",
+      "agentMonitorV2": "Agent Monitor V2",
       "schedules": "Schedule Management",
       "leaves": "Leave Management",
       "notices": "Notice Management",
@@ -133,6 +134,47 @@
       "addSuccess": "Add Success", 
       "deleteSuccess": "Delete Success",
       "updateSuccess": "Update Success"
+    },
+    "agentMonitorV2": {
+      "agentMonitorV2Title": "Agent Monitor V2",
+      "description": "Monitor team capacity status",
+      "monitorSettings": "Monitor Settings",
+      "brandLabel": "Brand",
+      "selectBrand": "Select Brand",
+      "workspace": "Workspace",
+      "selectWorkspace": "Select Workspace",
+      "autoRefresh": "Auto Refresh (minutes)",
+      "startAutoRefresh": "Start Auto Refresh",
+      "stopAutoRefresh": "Stop Auto Refresh",
+      "brandStatus": "Brand Status",
+      "status": "Status",
+      "online": "Online",
+      "offline": "Offline",
+      "apiConnection": "API Connection",
+      "normal": "Normal",
+      "abnormal": "Abnormal",
+      "workspaceCount": "Workspace Count",
+      "authStatus": "Auth Status",
+      "valid": "Valid",
+      "invalid": "Invalid",
+      "lastCheck": "Last Check",
+      "teamCapacityMonitor": "Team Capacity Monitor",
+      "agentCapacityMonitor": "Agent Capacity Monitor",
+      "refreshBrand": "Refresh Brand",
+      "refreshTeams": "Refresh Teams",
+      "teamFilter": "Team Filter",
+      "totalChats": "Total Chats",
+      "totalTickets": "Total Tickets",
+      "onlineAgents": "Online Agents",
+      "loading": "Loading...",
+      "chats": "chats",
+      "teams": "Teams",
+      "available": "Available",
+      "noAgentData": "No agent data available",
+      "selectBrandToStart": "Select Brand to start monitoring",
+      "selectWorkspaceToViewTeams": "Select Workspace to view Teams",
+      "brandOverview": "Brand Overview",
+      "members": "members"
     }
   },
   "zh": {
@@ -142,6 +184,7 @@
       "brands": "Brand 管理", 
       "users": "使用者管理",
       "agentMonitor": "Agent Monitor",
+      "agentMonitorV2": "Agent Monitor V2",
       "schedules": "排班管理",
       "leaves": "請假管理",
       "notices": "公告管理",
@@ -278,6 +321,7 @@
       "brands": "ブランド管理",
       "users": "ユーザー管理",
       "agentMonitor": "エージェント監視",
+      "agentMonitorV2": "エージェント監視 V2",
       "schedules": "スケジュール管理",
       "leaves": "休暇管理",
       "notices": "お知らせ管理",
